# mozart2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README  README.CI.md  README.MacOS.md  README.OpenBSD.md  README.Windows.md  README.md  appveyor.yaml  appveyor.yml  flake.nix  index.html
boostenv/main/: BoostBase.oz  CMakeLists.txt  boostenv-decl.hh  boostenv.cc  boostenv.hh  boostenvdatatypes-decl.hh  boostenvdatatypes.hh  boostenvtcp-decl.hh  boostenvtcp.hh  modos.hh
boosthost/emulator/: CMakeLists.txt  emulator.cc  ozc  ozengine
boosthost/emulator/windows/: ozc.cc
bootcompiler/: .classpath  .gitignore  .project  CMakeLists.txt  README.md  build.sbt  sbt  sbt.bat
bootcompiler/project/: plugins.sbt
lib/: CMakeLists.txt
lib/base/: Array.oz  Atom.oz  Base.oz  BitString.oz  ByteString.oz  Exception.oz  Float.oz  Int.oz  List.oz  Loop.oz  Object.oz  Record.oz  String.oz  Thread.oz  Time.oz  UnicodeString.oz  Value.oz  VirtualString.oz
lib/boot/: BootBase.oz
lib/compiler/: Abstractions.oz  Annotate.oz  Assembler.oz  BackquoteMacro.oz  BindingAnalysis.oz  Builtins.oz  CheckTupleSyntax.oz  CodeEmitter.oz  CodeGen.oz  CodeStore.oz  Common.env  Compiler.oz  CompilerClass.oz  CompilerPanel.oz  Core.oz  CoreLanguage.oz  EmacsInterface.oz  Errors.oz  ForLoop.oz  ForNotes.txt  ForRuntime.oz  FormatStrings.oz  FunAssembler.oz  FunBuiltins.oz  FunCode.oz  FunCodeGen.oz  FunComp.oz  FunCompiler.oz  FunCore.oz  FunEnd.oz  FunMain.oz  FunMake.oz  FunMisc.oz  FunRT.oz  FunRunTime.oz  FunSA.oz  FunStat.oz  FunUnnest.oz  GenericInterface.oz  GroundZip.oz  (+32 more)
lib/compiler/Doc/: CoreLanguage  FDCompare  FDCondis  Functor  Instr  SlowMeths  StepPoints  TupleSyntax  UniformStateAccess  VInstr
lib/cp/: Combinator.oz
lib/main/: AP.env  AP.oz  Base.env  Base.oz  BaseBuiltins.oz  BatchCompile.oz  CP-new.env  CP.env  CP.oz  Compiler.env  Compiler.oz  DP.env  DP.oz  DumpHalt.oz  DumpInitial.oz  DumpIntro.oz  Fault.oz  Init.oz  MakeAssembly.oz  MakeBatch.oz  MakeFunctorToEnv.oz  MakeOzAR.oz  MakeOzServer.oz  MakeOzVSServer.oz  Makefile-lilo.in  Misc.env  Misc.oz  OP.env  OP.oz  SP-new.env  SP.env  SP.oz  Standard.env  Standard.oz  StandardBuiltins.oz  WP.env  WP.oz  boot-init.txt  boot-ozc.txt  configure  (+3 more)
lib/main/ap/: AppLILO.oz  Applet.oz  Application.oz  ArgParser.oz  CgiParser.oz  Custom.oz  CustomEdit.oz  CustomGroup.oz  CustomOption.oz  GetArgs.oz  GuiArgs.oz  NOTES  OptionSheet.oz  PropSheet.oz  Servlet.oz  StandardModules.oz  StandardSubModules.oz  Syslet.oz  Tools.oz  test-applications.oz
lib/main/base/: Array.oz  Atom.oz  Base.oz  BaseBuiltins.oz  BitArray.oz  BitString.oz  Bool.oz  ByteString.oz  Cell.oz  Char.oz  Chunk.oz  Class.oz  Coders.oz  Combinators.oz  CompactByteString.oz  CompactString.oz  Dictionary.oz  Exception.oz  Float.oz  ForeignPointer.oz  Forward.oz  Functor.oz  Int.oz  InterFault.oz  Lazy.oz  List.oz  Literal.oz  Lock.oz  Loop.oz  Match.oz  Name.oz  Number.oz  Object.oz  Port.oz  Procedure.oz  Promise.oz  Record.oz  SiteProperty.oz  Space.oz  String.oz  (+10 more)
lib/main/boot/: BootBase.oz
lib/main/cp/: Combinator.oz  Combinators.oz  CpSupport.oz  FD.oz  FS.oz  RecordC.oz  Schedule.oz  Search.oz  Space.oz
lib/main/dp/: AcceptFunctor.oz  ConnectAcceptModule.oz  Connection.oz  ConnectionFunctor.oz  DP.oz  DPControl.oz  DPDefaults.oz  DPErrorFormatters.oz  DPInit.oz  DPMisc.oz  DPService.oz  DPStatistics.oz  DPinit.oz  Discovery.oz  Fault.oz  MakeAllLoader.oz  Perdio.oz  Remote.oz  RemoteServer.oz  Site.oz  TestURI.oz  URI.oz  URL.oz  VSServer.oz  VirtualSite.oz  agenda.oz  netscape.oz  remote.oz  server.oz
lib/main/gtk/: GDK.oz  GTK.oz  GTKSimpleBuilder.oz  Glade.oz  GnomeCanvas.oz  build_enums.perl  builder.perl  genconstants.pl  genoz.pl  glade.oz  gtkprelude.oz
lib/main/images/: backtrack.xbm  dash-line.xbm  debugger.xbm  eject.xbm  explorer.xbm  halt.xbm  hide.xbm  mini-dec.xbm  mini-inc.xbm  next.xbm  panel.xbm  pause.xbm  play.xbm  reset.xbm  solver.xbm  step.xbm  top.xbm  unhide.xbm  zig-zag.xbm
lib/main/init/: Init.oz  Module.oz  URI.oz  (+7 more)
lib/op/: Open.oz
lib/sys/: System.oz
lib/tools/: CMakeLists.txt
opi/: CMakeLists.txt  Emacs.oz  Main.oz  OPIEnv.oz  README.md  main.cc  oz-extra.el  oz-server.el  testmozart.kdev4
opi/emacs/: CMakeLists.txt  mozart.el  oz  oz-extra.el  oz-server.el  oz.el
opi/opi/: .gitignore  CMakeLists.txt  Emacs.oz  MainTest.oz  OPI.oz  OPIEnv.oz  OPIServer.oz  README.md  engine.cc  ozengine
vm/: .gitignore  CMakeLists.txt  LICENCE  README.md  mozart.kdev4
vm/boostenv/: CMakeLists.txt
vm/generator/: CMakeLists.txt
vm/lib/: CMakeLists.txt
vm/main/: CMakeLists.txt  array-decl.hh  array.hh  arrays.hh  atom-decl.hh  atom.hh  atomtable.hh  boolean-decl.hh  boolean.hh  builtins-decl.hh  builtins.hh  builtinutils-decl.hh  builtinutils.hh  bytestring-decl.hh  bytestring.hh  callables-decl.hh  callables.hh  cell-decl.hh  cell.hh  codearea-decl.hh  codearea.cc  codearea.hh  coders.cc  coders.hh  cons-decl.hh  cons.hh  core-forward-decl.hh  coreatoms-decl.hh  coreatoms.hh  corebuilders.hh  corebuiltins.cc  corebuiltins.hh  coredatatypes-decl.hh  coredatatypes.cc  coredatatypes.hh  coreinterfaces-decl.hh  coreinterfaces.cc  coreinterfaces.hh  coremodules.hh  datatype-decl.hh  (+94 more)
vm/src/: CMakeLists.txt  arrays.hh  atom-decl.hh  boolean-decl.hh  boolean.cc  boolean.hh  callables-decl.hh  callables.cc  callables.hh  codearea-decl.hh  codearea.cc  codearea.hh  corebuiltins.cc  corebuiltins.hh  coreinterfaces.hh  emulate.cc  emulate.hh  main.cc  memword.hh  opcodes.hh  smallint-decl.hh  smallint.cc  smallint.hh  storage.hh  store.cc  store.hh  type.hh  variables-decl.hh  variables.cc  variables.hh  vm.cc  vm.hh
vm/test/: CMakeLists.txt  atomtest.cc  bytestringtest.cc  coderstest.cc  factorial_tests.cpp  floattest.cc  gctest.cc  matchtest.cc  sanitytest.cc  smallint_factorial_test.cpp  smallinttest.cc  source.h  stringoffsettest.cc  stringtest.cc  testutils.cc  testutils.hh  ut_source.cpp  utftest.cc  virtualstringtest.cc
vm/vm/: CMakeLists.txt  CMakeLists.txt.tmp
wish/: CMakeLists.txt  unixmain.cc  winmain.cc
(+1348 files in other folders)
